; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_http_request.c_on_connect.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_http_request.c_on_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.st_h2o_mruby_http_request_context_t* }
%struct.st_h2o_mruby_http_request_context_t = type { %struct.TYPE_9__*, %struct.TYPE_7__ }
%struct.TYPE_9__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_10__*, i8*, i32*, i32*, i32**, i64*, i32*, i32*, i32*, i32*)* @on_connect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @on_connect(%struct.TYPE_10__* %0, i8* %1, i32* %2, i32* %3, i32** %4, i64* %5, i32* %6, i32* %7, i32* %8, i32* %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_10__*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32**, align 8
  %17 = alloca i64*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca %struct.st_h2o_mruby_http_request_context_t*, align 8
  %23 = alloca i32, align 4
  %24 = alloca i32*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %12, align 8
  store i8* %1, i8** %13, align 8
  store i32* %2, i32** %14, align 8
  store i32* %3, i32** %15, align 8
  store i32** %4, i32*** %16, align 8
  store i64* %5, i64** %17, align 8
  store i32* %6, i32** %18, align 8
  store i32* %7, i32** %19, align 8
  store i32* %8, i32** %20, align 8
  store i32* %9, i32** %21, align 8
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %26 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %25, i32 0, i32 0
  %27 = load %struct.st_h2o_mruby_http_request_context_t*, %struct.st_h2o_mruby_http_request_context_t** %26, align 8
  store %struct.st_h2o_mruby_http_request_context_t* %27, %struct.st_h2o_mruby_http_request_context_t** %22, align 8
  %28 = load %struct.st_h2o_mruby_http_request_context_t*, %struct.st_h2o_mruby_http_request_context_t** %22, align 8
  %29 = call i64 @try_dispose_context(%struct.st_h2o_mruby_http_request_context_t* %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %10
  store i32* null, i32** %11, align 8
  br label %74

32:                                               ; preds = %10
  %33 = load %struct.st_h2o_mruby_http_request_context_t*, %struct.st_h2o_mruby_http_request_context_t** %22, align 8
  %34 = getelementptr inbounds %struct.st_h2o_mruby_http_request_context_t, %struct.st_h2o_mruby_http_request_context_t* %33, i32 0, i32 0
  %35 = load %struct.TYPE_9__*, %struct.TYPE_9__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %35, i32 0, i32 0
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @mrb_gc_arena_save(i32 %39)
  store i32 %40, i32* %23, align 4
  %41 = load %struct.st_h2o_mruby_http_request_context_t*, %struct.st_h2o_mruby_http_request_context_t** %22, align 8
  %42 = getelementptr inbounds %struct.st_h2o_mruby_http_request_context_t, %struct.st_h2o_mruby_http_request_context_t* %41, i32 0, i32 0
  %43 = load %struct.TYPE_9__*, %struct.TYPE_9__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %43, i32 0, i32 0
  %45 = load %struct.TYPE_8__*, %struct.TYPE_8__** %44, align 8
  %46 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = load %struct.st_h2o_mruby_http_request_context_t*, %struct.st_h2o_mruby_http_request_context_t** %22, align 8
  %49 = getelementptr inbounds %struct.st_h2o_mruby_http_request_context_t, %struct.st_h2o_mruby_http_request_context_t* %48, i32 0, i32 1
  %50 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @mrb_gc_protect(i32 %47, i32 %51)
  %53 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %54 = load i8*, i8** %13, align 8
  %55 = load i32*, i32** %14, align 8
  %56 = load i32*, i32** %15, align 8
  %57 = load i32**, i32*** %16, align 8
  %58 = load i64*, i64** %17, align 8
  %59 = load i32*, i32** %18, align 8
  %60 = load i32*, i32** %19, align 8
  %61 = load i32*, i32** %20, align 8
  %62 = load i32*, i32** %21, align 8
  %63 = call i32* @do_on_connect(%struct.TYPE_10__* %53, i8* %54, i32* %55, i32* %56, i32** %57, i64* %58, i32* %59, i32* %60, i32* %61, i32* %62)
  store i32* %63, i32** %24, align 8
  %64 = load %struct.st_h2o_mruby_http_request_context_t*, %struct.st_h2o_mruby_http_request_context_t** %22, align 8
  %65 = getelementptr inbounds %struct.st_h2o_mruby_http_request_context_t, %struct.st_h2o_mruby_http_request_context_t* %64, i32 0, i32 0
  %66 = load %struct.TYPE_9__*, %struct.TYPE_9__** %65, align 8
  %67 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %66, i32 0, i32 0
  %68 = load %struct.TYPE_8__*, %struct.TYPE_8__** %67, align 8
  %69 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 4
  %71 = load i32, i32* %23, align 4
  %72 = call i32 @mrb_gc_arena_restore(i32 %70, i32 %71)
  %73 = load i32*, i32** %24, align 8
  store i32* %73, i32** %11, align 8
  br label %74

74:                                               ; preds = %32, %31
  %75 = load i32*, i32** %11, align 8
  ret i32* %75
}

declare dso_local i64 @try_dispose_context(%struct.st_h2o_mruby_http_request_context_t*) #1

declare dso_local i32 @mrb_gc_arena_save(i32) #1

declare dso_local i32 @mrb_gc_protect(i32, i32) #1

declare dso_local i32* @do_on_connect(%struct.TYPE_10__*, i8*, i32*, i32*, i32**, i64*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @mrb_gc_arena_restore(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
